Fix css align left for header

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,4 +1,4 @@
-/* this is some magical font-importing.  
+`/* this is some magical font-importing.  
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
@@ -8,10 +8,20 @@ body {
   font-family: Besley, serif;
 }
 
+
+/* * {
+  margin:16px
+} */
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+/* added */
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -35,14 +45,22 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+/* added */
+  margin-left: auto;
+  margin-right: 5px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  /* added */
+  margin: 5px;
 }
 
 ul {
   list-style-type: none;
+  /* added */
+  display: flex;
+  gap: 16px;
 }
